HTML & CSS skeleton

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="mainStyle.css">
-<title>Insert title here</title>
+<title>Login</title>
 </head>
+
 <body>
 
+	<div class="mainbody">
+		
+		<div class="loginbox">
+		
+			<h1>Login</h1>
+			<form action ="" method = "post">
+				<table>
+					<tr>
+						<td><p>Username</p></td>
+						<td><input class = "input" type = "text" name = "username"> <br></td>
+					</tr>
+					<tr>
+						<td><p>Password</p></td>
+						<td><input class = "input" type = "password" name = "password"> <br></td>
+					</tr>
+					<tr>
+						<td><input type = "submit" value = "Login"></td>
+					</tr>
+				</table>
+			</form>
+		
+		</div>
+
+	</div>
+
 </body>
+
 </html>
