Updated HTML & CSS

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,19 +15,10 @@
 		
 			<h1>Login</h1>
 			<form action ="" method = "post">
-				<table>
-					<tr>
-						<td><p>Username</p></td>
-						<td><input class="input" type="text" name="username"> <br></td>
-					</tr>
-					<tr>
-						<td><p>Password</p></td>
-						<td><input class="input" type="password" name="password"> <br></td>
-					</tr>
-					<tr>
-						<td><input type="submit" value="Login"></td>
-					</tr>
-				</table>
+				
+				<div class="inputrow">Username <input class="input" type="text" name="username"></div>
+				<div class="inputrow">Password <input class="input" type="password" name="password"></div>
+				<input type="submit" value="Login">
 			</form>
 		
 		</div>
