Complete Login page

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,7 +18,7 @@
 				
 				<div class="inputrow">Username <input class="input" type="text" name="username"></div>
 				<div class="inputrow">Password <input class="input" type="password" name="password"></div>
-				<input type="submit" value="Login">
+				<div class="inputrow"><input type="submit" value="Login"></div>
 			</form>
 		
 		</div>
